spacing fix

--- a/src/sponsors/Sponsors.scss
+++ b/src/sponsors/Sponsors.scss
@@ -13,6 +13,9 @@
             text-align: center;
             img {
                 width: 25vw;
+                @media (max-width: $desktopMobileToggleWidth) {
+                    width: 80vw;
+                  }
             }
         }
     }
